[package]
name = "my_parser_kma_group_3_Kharchenko"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parser for KMA Rust project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_parser_kma_group_1 = "0.2.0"
peg = "0.8.2"
