[package]
name = "my_html_parser_kma"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parser for KMA Rust project. This is a HTML parser."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
my_parser_kma_group_1 = "0.2.0"
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
